--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "tailwindcss": "^2.2.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run watch:css &&react-scripts start",
     "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
